<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This class forms part of the Dynamic Proxies in Java Course by
  ~ Dr Heinz Max Kabutz from JavaSpecialists.eu and may not be distributed
  ~ without written consent.
  ~
  ~ Copyright 2020, Dr Heinz Max Kabutz, All rights reserved.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dynamicproxies</groupId>
    <artifactId>dynamic-proxies-course</artifactId>
    <name>dynamic-proxies-course</name>
    <description>Dynamic Proxies Course</description>
    <version>1.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <derby.version>10.15.1.3</derby.version>
        <junit.version>4.11</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>eu.javaspecialists.books.dynamicproxies</groupId>
            <artifactId>core</artifactId>
            <version>1.4.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>${derby.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derbyshared</artifactId>
            <version>${derby.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derbytools</artifactId>
            <version>${derby.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.28.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <!-- v3 is needed for Java 13 -->
                <version>3.0.0-M4</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang=eu.javaspecialists.books.dynamicproxies
                        --add-reads eu.javaspecialists.books.dynamicproxies=eu.javaspecialists.courses.dynamicproxies
                    </argLine>
                    <includes>
                        <include>dynamicproxies.SolutionsTestSuite</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
